--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -130,7 +130,7 @@
     
     <div class="social-media-banner overflow overflow-orange" >
     <a href="https://www.facebook.com/pages/iktel.nl/160771850782701"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
-    <a href="http://twitter.com/iktel.nlNL"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
+    <a href="http://twitter.com/iktelNL"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
     <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
 
     <a href="https://github.com/PerceptumNL"><img src="/images/social-media-icons/github-256.png" height="128px" width="128px"></a>
