--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -97,7 +97,7 @@
               <h4 style="color:#0776A0; font-family:Raleway;font-size: 1.8em">iktel.nl <strong>open source</strong></h4>
               <p style="color:black; font-family:Raleway; letter-spacing: 1.5px; font-size: 1em">
                 Iktel.nl is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
-                Wij willen graag dat deze Nederlandse iktel.nl groeit met behulp van een community van programmeurs en leraren.
+                Wij willen graag dat iktel.nl groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan iktel.nl gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
                 van de onderwijs community.</p>
                 <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in <strong>GitHub</strong></a>
