--- a/templates/about/stichting.html
+++ b/templates/about/stichting.html
@@ -7,7 +7,7 @@
 <h2 class="main-headline" style="white-space: pre;">Stichting iktel.nl</h2>
 
 <h3></h3>
-<p>iktel.nl wordt een stichting. Dit betekent dat het platform een onafhankelijke non-profit organisatie wordt. De reden dat iktel.nl een stichting gaat worden, heeft te maken met ons ideaal van gratis online onderwijs. Wij willen dit bereiken zonder het gebruik van advertenties, omdat wij vinden dat leerlingen tijdens het leren niet blootgesteld moeten worden aan commerciële doeleinden. Toch zijn er de benodigde kosten voor het bouwen en onderhouden van dit platform en daarom willen wij werken met vrijwilligers en donateurs.
+<p>Iktel.nl wordt een stichting. Dit betekent dat het platform een onafhankelijke non-profit organisatie wordt. De reden dat iktel.nl een stichting gaat worden, heeft te maken met ons ideaal van gratis online onderwijs. Wij willen dit bereiken zonder het gebruik van advertenties, omdat wij vinden dat leerlingen tijdens het leren niet blootgesteld moeten worden aan commerciële doeleinden. Toch zijn er de benodigde kosten voor het bouwen en onderhouden van dit platform en daarom willen wij werken met vrijwilligers en donateurs.
 </p>
 <h3>Het doel</h3>
 <p>Wij geloven in crowdsourcing. Het doel van de stichting is het creëren van een EKO-systeem waarbij iktel.nl zichzelf in stand houdt met behulp van alle gebruikers die iets kunnen bijdragen in de zin van het aanbieden van nieuwe content of het geven van feedback op bestaande content. Zo blijft het platform up-to-date en naar wens van de gebruiker.
