--- a/templates/gebruiksvoorwaarden.html
+++ b/templates/gebruiksvoorwaarden.html
@@ -17,11 +17,11 @@
 
 		<h1>Gebruiksvoorwaarden</h1>
 		<p>
-		Welkom bij www.iktel.nl (hierna: de Website) en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van de Website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de Website voor iedereen werkt.</p>
+		Welkom bij www.iktel.nl en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van deze website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de website voor iedereen werkt.</p>
 
-		<p>iktel.nl geïnspireerd op Khan Academy.</p>
+		<p>Iktel.nl geïnspireerd op Khan Academy.</p>
 
-		<p>De Website is een initiatief van iktel.nl en is geïnspireerd op- en gelanceerd met toestemming van www.khanacademy.org, maar maakt hier geen deel vanuit. De op deze Website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de Website is samengesteld door iktel.nl en haar vrijwilligers.</p>
+		<p>De website is een initiatief van Perceptum en is geïnspireerd op- en gelanceerd met toestemming van www.khanacademy.org, maar maakt hier geen deel vanuit. De op deze website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de website is samengesteld door iktel.nl en haar vrijwilligers.</p>
 
 		<h6>Voorwaarden toegang</h6>
         <div class="info-list"><p>
