--- a/templates/voorleraren.html
+++ b/templates/voorleraren.html
@@ -37,7 +37,7 @@ img {
         <h1>Voor leraren</h1>
         <h3>Werken met iktel.nl</h3>
           <p>
-            iktel.nl is helemaal gratis te gebruiken. 
+            Iktel.nl is helemaal gratis te gebruiken. 
             Dit past in ons doel om passend onderwijs voor iedereen mogelijk te maken. Het enige benodigde is een Google- of Facebookaccount.
             Deze zijn overigens ook gratis aan te maken.
             Naast het gratis gebruik van iktel.nl kun je ook kiezen voor extra ondersteuning in de vorm van support en/of trainingen.
@@ -45,7 +45,7 @@ img {
           </p>
         <h3>Inloggen</h3>
           <p>
-            iktel.nl is door iedereen te gebruiken. 
+            Iktel.nl is door iedereen te gebruiken. 
             Wil je echter inloggen en je vorderingen opslaan, dan heb je een Google- of Facebookaccount is nodig. 
             Wij raden aan om hiervoor gebruik te maken van Google Apps for Education. 
             Het gebruik hiervan is gratis en biedt de mogelijkheid om de hele klas een zelfde soort e-mail adres te geven. 
@@ -146,7 +146,7 @@ img {
           </p>
         <h3>Zelf opdrachten maken en toevoegen</h3>
           <p>
-            iktel.nl is nog druk bezig met verbeteren en aanvullen van de website. 
+            Iktel.nl is nog druk bezig met verbeteren en aanvullen van de website. 
             We zijn zelf bezig met het ontwikkelen van nieuwe oefeningen. 
             Ook dit proces is op onze wiki te volgen. 
             Hier staan alle oefeningen aangegeven die op den duur op de site komen. 
