--- a/templates/about/faq.html
+++ b/templates/about/faq.html
@@ -77,19 +77,19 @@
     
     <a name="why"><h2>Wat is iktel.nl?</h2></a>
     <p>
-        iktel.nl is de Nederlandse versie van de Khan Academy. 
-		Aangezien we heel enthousiast zijn over de toegevoegde waarde van de oorspronkelijke Amerikaanse versie van de Khan Academy, 
-		en we er van overtuigd zijn dat dit concept ook toepasbaar is op de Nederlandse situatie, hebben we een eigen versie ge&iuml;nstalleerd en zijn we de site gaan vertalen. 
-		Details over de techniek vindt u hier.
+        Iktel.nl is gebaseerd op de Amerikaanse Khan Academy. 
+		Aangezien we heel enthousiast waren over de toegevoegde waarde van de oorspronkelijke Khan Academy, 
+		en we er van overtuigd zijn dat dit concept ook toepasbaar is op de Nederlandse situatie, hebben we een eigen versie ge&iuml;nstalleerd en zijn we de Amerikaanse site gaan vertalen. 
+		Dit was dankzij de Open Source filosofie van Khan Academy mogelijk.
     </p>
 	<a name="wat"><h2>Wat maakt iktel.nl totaal anders dan alle andere onderwijsmogelijkheden?</h2></a>
     <p>
-        Er zijn een aantal opvallende verschillen. Met meer dan 2600 video's is het verreweg de meest uitgebreide collectie onderwijsmateriaal die op het internet beschikbaar is. De Khan Academy geeft studenten de mogelijkheid vrijwel alle leemtes in hun kennis op te vullen. Het materiaal is beschikbaar in hapklare brokken van 10 tot 20 minuten en speciaal ontwikkeld om te bekijken op een computer. Daarmee is het wezenlijk anders dan video-opnames van gewone lessen. Het relaxte taalgebruik is het tegenovergestelde van wat mensen normaal verwachten van wiskunde en science lessen. Het zijn echter juist de meest onopvallende verschillen die de filmpjes zo bijzonder maken. 
+        Er zijn een aantal opvallende verschillen. Iktel.nl geeft leerlingen de mogelijkheid vrijwel alle leegtes in hun kennis op te vullen. Het materiaal is beschikbaar in hapklare brokken van 10 tot 20 minuten en speciaal ontwikkeld om te bekijken op een computer. Daarmee is het wezenlijk anders dan video-opnames van gewone lessen. Het relaxte taalgebruik is het tegenovergestelde van wat mensen normaal verwachten van reken- en wiskundelessen. 
     </p>		
 	<a name="lesprogramma"><h2>Wat voor soort lesprogramma volg je?</h2></a>
     <p>
-		Eigenlijk volg ik geen lesprogramma. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor iktel.nl is niets zo belangrijk als echt begrip te kweken.
-		Dat gezegd hebbende, in landelijke examens komt allerlei stof aan bod waar studenten kennis van moeten hebben om de examens met succes te kunnen afleggen. Daarom probeer ik alle mogelijke onderwerpen aan bod te laten komen.
+		Eigenlijk volg je geen lesprogramma, aldus Salman Khan. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor iktel.nl is niets zo belangrijk als echt begrip te kweken.
+		Dat gezegd hebbende, in landelijke examens komt allerlei stof aan bod waar leerlingen kennis van moeten hebben om de examens met succes te kunnen afleggen. Daarom probeer ik alle mogelijke onderwerpen aan bod te laten komen.
 		</br></br>
 		Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij, een mens van vlees en bloed, gefascineerd door de wereld om mij heen. De lesstof wordt uitgelegd zoals ik het zelf begrijp niet zoals ze in een stoffig lesboek staan.
 		Wie mijn video's bekijkt ziet dat er met veel liefde  aan gewerkt is door  een beetje aparte, eigenwijze man die een passie heeft voor leren en onderwijzen. Ik denk niet dat er &eacute;&eacute;n bedrijf of overheidsinstantie is die dit voor elkaar krijgt, hoeveel geld ze er ook tegenaan gooien.
