--- a/templates/coach_resources/toolkit_content/classroom-culture.html
+++ b/templates/coach_resources/toolkit_content/classroom-culture.html
@@ -15,7 +15,7 @@ daarnaast het volgende nodig: <br>
 	<li> Paint of ander tekenprogramma.</li><br>
 	<li>YouTube account (Je Google-account kan hier ook gebruikt worden).</li><br>
 	<li>Screencast-o-matic (gratis web-based programma op <a href="www.screencast-o-matic.com">screencast-o-matic</a>) of een ander screencastprogramma.</li>
- <br><br>iktel.nl kan ook worden gebruikt op een computer, tablet of smartphone. Om in te loggen hebben de leerlingen een Google- of Facebookaccount 
+ <br><br>Iktel.nl kan ook worden gebruikt op een computer, tablet of smartphone. Om in te loggen hebben de leerlingen een Google- of Facebookaccount 
 nodig.</p>
 	
 	<p><a href="{{base_url}}/keys-to-success" class="call-to-action simple-button green">Volgende: Voor leraar en leerling →</a></p>
