--- a/templates/coach_resources/toolkit_content/different-learners.html
+++ b/templates/coach_resources/toolkit_content/different-learners.html
@@ -4,10 +4,10 @@
 		
 	<h1>Different types of learners</h1>
 	<hr>
-	<p class="lead">Ways KA can be used to engage different types of students</p>
+	<p class="lead">Ways iktel.nl can be used to engage different types of students</p>
 	
 	<h3>Motivated learners</h3>
-	<p>These students often use KA at home and progress through KA at impressive speeds!  If your motivated learners have already gone through all the material that you’ve prepared for them, here are some suggestions:</p>
+	<p>These students often use iktel.nl at home and progress through iktel.nl at impressive speeds!  If your motivated learners have already gone through all the material that you’ve prepared for them, here are some suggestions:</p>
 	<ul class="bullet">
 		<li>Allow your students to continue to move at their own pace by having them watch videos and practice exercises of their choosing</li>
 		<li>Give your students a project that will deepen their conceptual learning of the exercises they have just mastered</li>
@@ -15,7 +15,7 @@
 	</ul>
 	
 	<h3>Disengaged learners</h3>
-	<p>These students may be uninterested in KA and use time on the computer to goof off or procrastinate.</p>
+	<p>These students may be uninterested in iktel.nl and use time on the computer to goof off or procrastinate.</p>
 	<ul class="bullet">
 		<li>Diagnose the problem: Does the student have all prerequisite skills necessary for the exercise being worked on? If not, consider giving the student time to complete the prerequisites first. Is there a situation outside of school that is affecting the student’s concentration?  What is the student’s history in math?  In school?</li>
 		<li>Find incentives and motivators: set appropriate goals and celebrate small successes, share data with other coaches or family members/influencers, encourage and reward improvement in attitude/work ethic</li>
