--- a/templates/coach_resources/toolkit_content/first-week.html
+++ b/templates/coach_resources/toolkit_content/first-week.html
@@ -2,11 +2,10 @@
 
 {% block col1content %}
 		
-	<h1>Wat houdt Khan in de klas in?</h1>
+	<h1>Wat houdt iktel.nl in de klas in?</h1>
 	<hr>
 	
-	<p> Het doel van is dat leraren Khan 
-Academie gaan gebruiken in de klas. 
+	<p> Het doel is dat leraren iktel.nl gaan gebruiken in de klas. 
 Leraren en leerlingen gaan dus  
 werken met iktel.nl. De leraar 
 wordt coach van zijn klas en zal (een 
@@ -31,8 +30,8 @@ altijd contact met ons opnemen.</p>
 <div class="callout">
 		<h3>Handige links</h3>
 		<ul class="bullet">
-			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-week.pdf">Rooster voor het gebruik van de eerste week van Khan</a></li>
-			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-month.pdf">Rooster voor het gebruik van de eerste maand van Khan</a></li>
+			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-week.pdf">Rooster voor het gebruik van de eerste week van iktel.nl</a></li>
+			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-month.pdf">Rooster voor het gebruik van de eerste maand van iktel.nl</a></li>
 		</ul>			
 
 </div>
