--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -7,7 +7,7 @@
 		
 	<p class="lead">Als je iktel.nl in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
 	
-	<p>iktel.nl kan op verschillende, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met iktel.nl op school werken. Hiermee kunnen andere leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf iktel.nl in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze toevoegt aan onze <a href="{{base_url}}/teacher-faqs">FAQs</a>!</p> 
+	<p>Iktel.nl kan op verschillende, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met iktel.nl op school werken. Hiermee kunnen andere leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf iktel.nl in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze toevoegt aan onze <a href="{{base_url}}/teacher-faqs">FAQs</a>!</p> 
 
 	<p>Afhankelijk van hoe jij van plan bent iktel.nl in jouw klas te gaan gebruiken, zullen verschillende delen van de toolkit voor jou nuttig zijn.</p>
 	
