--- a/templates/coach_resources/toolkit_content/instructional-strategies.html
+++ b/templates/coach_resources/toolkit_content/instructional-strategies.html
@@ -2,43 +2,43 @@
 
 {% block col1content %}
 		
-	<h1>Welke informatie kan je opvragen?</h1>
+	<h1>Welke informatie kun je opvragen?</h1>
 	
-	<p><h4> iktel.nl houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
+	<p><h4> Iktel.nl houdt automatisch voor je bij welke oefeningen leerlingen maken, hoe goed ze de 
 oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
 informatie die u kunt opvragen.</h4>
 
 <h4>Het voortgangsoverzicht</h4>
-Het voortgangsoverzicht zorgt ervoor dat je direct kan 
+Het voortgangsoverzicht zorgt ervoor dat je direct kunt 
 zien hoe de klas presteert bij een bepaald onderwerp 
 en met welke onderdelen ze worstelen. Het 
 filtersysteem maakt het mogelijk in te zoomen op een 
 bepaalde leerling.<br><br>
 <h4>Het dagelijkse activiteiten overzicht</h4>
-Met het dagelijkse activiteiten overzicht kunt u precies 
+Met het dagelijkse activiteiten overzicht kun je precies 
 zien waar leerlingen op een bepaald moment aan 
 werken.<br><br>
 <h4>Samenvatting voortgang</h4>
-De samenvatting voortgang biedt u de mogelijkheid in 
-te zoomen op een specifiek onderwerp. U kunt 
-precies zien hoe uw klas dit onderwerp beheerst.<br><br>
+De samenvatting voortgang biedt je de mogelijkheid in 
+te zoomen op een specifiek onderwerp. Je kunt 
+precies zien hoe jouw klas dit onderwerp beheerst.<br><br>
 <h4>Doelen</h4>
-Door op doelen te klikken ziet u meteen welke doelen uw 
+Door op doelen te klikken zie je meteen welke doelen uw 
 leerlingen voor zichzelf hebben gesteld.<br><br>
 <h4>Welke informatie kunt u opvragen?</h4>
-iktel.nl houdt voor u bij welke oefeningen leerlingen maken, hoe goed ze de 
-oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht van de 
-informatie die u kunt opvragen.<br><br>
+Iktel.nl houdt voor je bij welke oefeningen leerlingen maken, hoe goed ze de 
+oefeningen maken en wat hun doelstellingen zijn. Hieronder zie je een overzicht van de 
+informatie die je kunt opvragen.<br><br>
 <h4>Focus</h4>
-Onder focus ziet u precies op welke oefeningen en 
-video's uw leerlingen zich focussen. Doordat u inzicht 
-krijgt in waar zij hun tijd aan besteden kunt u hen 
-gericht sturen waar u denkt dat dit nodig is.<br><br>
+Onder focus zie je precies op welke oefeningen en 
+video's jouw leerlingen zich focussen. Doordat je inzicht 
+krijgt in waar zij hun tijd aan besteden kun je hen 
+gericht sturen waar jij denkt dat dit nodig is.<br><br>
 <h4>Activiteiten overzicht</h4>
 Geeft inzicht in waar leerlingen gedurende een 
 bepaalde periode aan gewerkt hebben. 
 <h4>Prestaties</h4>
-U kunt precies zien welke badges uw leerlingen hebben 
+Je kunt precies zien welke badges de leerlingen hebben 
 behaald.</p>
 	
 	
