--- a/templates/coach_resources/toolkit_content/navigating-the-site.html
+++ b/templates/coach_resources/toolkit_content/navigating-the-site.html
@@ -6,13 +6,13 @@
 	<hr>
 	<p class="lead">Onderstaand filmpje beschrijft hoe de site werkt. </p>
 	
-	<p>Bekijk alvast een Engelstalig filmpje om te ontdekken hoe de website werkt. Deze wordt spoedig vervangen voor een Nederlandstalige.</p>
+	<p>Bekijk dit (Engelstalig) filmpje om te ontdekken hoe de website werkt.</p>
 	
 	<iframe width="560" height="315" src="http://www.youtube.com/embed/DLt6mMQH1OY" frameborder="0" allowfullscreen></iframe>
 	
 
 	
-	<p><a href="{{base_url}}/first-week" class="call-to-action simple-button green">Volgende: Wat houdt Khan in de klas in? →</a></p>
+	<p><a href="{{base_url}}/first-week" class="call-to-action simple-button green">Volgende: Wat houdt iktel.nl in de klas in? →</a></p>
 
 {% endblock col1content %}	
 		
