--- a/templates/coach_resources/toolkit_content/technology.html
+++ b/templates/coach_resources/toolkit_content/technology.html
@@ -21,7 +21,7 @@
 	
 	
 	<h3>YouTube filter</h3>
-	<p>Als je wilt dat je leerlingen alleen gebruik kunnen maken van de Khan-video's (en dus niet van andere Youtube-content), kun je je opgeven voor<a href="http://youtube.com/education_signup">YouTube voor scholen</a></li>. Meer uitleg vind je op <a href="http://www.youtube.com/schools"></a>.</p>
+	<p>Als je wilt dat je leerlingen alleen gebruik kunnen maken van iktel.nl-video's (en dus niet van andere Youtube-content), kun je je opgeven voor<a href="http://youtube.com/education_signup">YouTube voor scholen</a></li>. Meer uitleg vind je op <a href="http://www.youtube.com/schools"></a>.</p>
 	
 	
 	<p><a href="{{base_url}}/navigating-the-site" class="call-to-action simple-button green">Volgende: Navigatie →</a></p>
