--- a/templates/coach_resources/toolkit_content/toolkit-sections.html
+++ b/templates/coach_resources/toolkit_content/toolkit-sections.html
@@ -6,7 +6,7 @@
 	<hr>
 	<p class="lead">Hier volgt een korte beschrijving van de vijf onderdelen van deze toolkit</p>
 	<ul class="bullet">
-		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van iktel.nl, kom erachter hoe jij iktel.nl kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
+		<li><strong>Het kiezen voor iktel.nl:</strong> Begrijp de visie van iktel.nl, kom erachter hoe jij iktel.nl kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
 		<li><strong>Aan de slag:</strong> Bepaal welke klassen iktel.nl kunnen gebruiken en ontdek hoe de site werkt.</li>
 		<li><strong>Klas tijd:</strong> Ontdek in welke leermethodes iktel.nl toegepast kan worden.</li>
 		<li><strong>Curriculum:</strong> Vind hier o.a. downloadbare werkbladen.</li>
