--- a/templates/coach_resources/toolkit_content/using-data.html
+++ b/templates/coach_resources/toolkit_content/using-data.html
@@ -5,7 +5,7 @@
 	<h1>Data gebruiken</h1>
 	<hr>
 	
-	<p class="lead">Aanbevolen manieren om de KA data te gebruiken</p>
+	<p class="lead">Aanbevolen manieren om de iktel.nl data te gebruiken</p>
 	
 	<h3>Voortgangsrapport</h3></p>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/ProgressSummary2.jpg"><img width="100%" src="/images/toolkit/ProgressSummary.jpg"/></a></span>
@@ -19,7 +19,7 @@
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/DailyActivityReport.jpg"><img width="100%" src="/images/toolkit/DailyActivityReport2.jpg"/></a></span>
 	<ul class="bullet"></p>
 		<li><strong>Tijdens de les:</strong> Bekijk welke stof de klas aan het oefenen is en hoe snel dat gaat. Je kunt dit ook aan de klas zelf laten zien om ze te motiveren, of vergelijk de resultaten dagelijks met andere klassen.</li>
-		<li><strong>Deelneming/huiswerk:</strong> Je kunt bijvoorbeeld een tijd instellen die leerlingen aan Khan moeten besteden. Dit kan voor zowel video kijken als oefeningen maken gelden. Dit verslag geeft een globaal inzicht hoeveel er ook daadwerkelijk tijdens of na de les is gedaan.</li>
+		<li><strong>Deelneming/huiswerk:</strong> Je kunt bijvoorbeeld een tijd instellen die leerlingen aan iktel.nl moeten besteden. Dit kan voor zowel video kijken als oefeningen maken gelden. Dit verslag geeft een globaal inzicht hoeveel er ook daadwerkelijk tijdens of na de les is gedaan.</li>
 	</ul>
 	<br>
 	<h3>Doelen</h3>
@@ -40,7 +40,7 @@
 	<h3>Dagelijks activiteiten verslag</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/StudentActivity.jpg"><img width="100%" src="/images/toolkit/Activity.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Individuele aandacht:</strong> Hier kun je zien hoeveel tijd een leerling per dag, week of maand aan KA besteedt. Hier kun je precies zien hoe lang leerlingen er over doen om zich de lesstof machtig te maken.</li> 
+		<li><strong>Individuele aandacht:</strong> Hier kun je zien hoeveel tijd een leerling per dag, week of maand aan iktel.nl besteedt. Hier kun je precies zien hoe lang leerlingen er over doen om zich de lesstof machtig te maken.</li> 
 	</ul>
 	<br>
 	<br>
