--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -134,7 +134,7 @@
 	        </a></li>
 	        
 			<li>
-	            <span class="inactive link-section-header">Kiezen voor Khan</span>
+	            <span class="inactive link-section-header">Kiezen voor iktel.nl</span>
 	            <ul class="second-tier">
 	                <li><a href="{{base_url}}/how-to-use-this-toolkit" class="tab-link ellipsis no-recolor {% if 'how-to-use-this-toolkit' == selected_id %}active-tab{% endif %}" rel="section-1">Toolkit gebruiken</a></li>
 	                <li><a href="{{base_url}}/toolkit-sections" class="tab-link ellipsis no-recolor {% if 'toolkit-sections' == selected_id %}active-tab{% endif %}" rel="section-2">Toolkit onderdelen</a></li>
@@ -144,10 +144,10 @@
 	        <li>
 	            <span class="inactive link-section-header">Aan de slag</span>
 	            <ul class="second-tier">
-	                <li><a href="{{base_url}}/setting-up-accounts" class="tab-link ellipsis no-recolor {% if 'setting-up-accounts' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Khan in de klas</a></li>
+	                <li><a href="{{base_url}}/setting-up-accounts" class="tab-link ellipsis no-recolor {% if 'setting-up-accounts' == selected_id %}active-tab{% endif %}" rel="getting-started accounts">Iktel.nl in de klas</a></li>
 	                
 	                <li><a href="{{base_url}}/navigating-the-site" class="tab-link ellipsis no-recolor {% if 'navigating-the-site' == selected_id %}active-tab{% endif %}" rel="getting-started navigating">Navigatie op de site</a></li>
-	                <li><a href="{{base_url}}/first-week" class="tab-link ellipsis no-recolor {% if 'first-week' == selected_id %}active-tab{% endif %}" rel="getting-started warming">Wat houdt Khan in de klas in?</a></li-->
+	                <li><a href="{{base_url}}/first-week" class="tab-link ellipsis no-recolor {% if 'first-week' == selected_id %}active-tab{% endif %}" rel="getting-started warming">Wat houdt iktel.nl in de klas in?</a></li-->
 	            </ul>
 	        </li>
 	        <li>
