--- a/templates/nl-content/about.html
+++ b/templates/nl-content/about.html
@@ -68,7 +68,7 @@
 						Het doel van iktel.nl is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
 					</p>
 					<p>
-						Al het materiaal op de site is voor iedereen beschikbaar of je nu student, leraar, thuisstudent, schoolleider of een tweedekanser bent, die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. 
+						Al het materiaal op de site is voor iedereen beschikbaar of je nu student, leraar, thuisstudent, schoolleider of een tweedekanser bent, die na twintig jaar weer naar school wilt, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. 
 						Al het materiaal van iktel.nl en alle hulpmiddelen die wij hebben zijn kosteloos beschikbaar voor iedereen.
 					</p>
 			</div>
