--- a/templates/nl-content/faq.html
+++ b/templates/nl-content/faq.html
@@ -97,7 +97,7 @@
                     <a name="why"><h2>Wat is iktel.nl?</h2></a>
 
                     <p>
-                        iktel.nl is de Nederlandse versie van de Khan Academy.
+                        Iktel.nl is gebaseerd op de Amerikaanse Khan Academy.
                         Aangezien we heel enthousiast zijn over de toegevoegde waarde van de oorspronkelijke Amerikaanse
                         versie van de Khan Academy,
                         en we er van overtuigd zijn dat dit concept ook toepasbaar is op de Nederlandse situatie, hebben
