--- a/templates/partners.html
+++ b/templates/partners.html
@@ -36,7 +36,7 @@
     	<p>
     		Binnen iktel.nl zijn de komende jaren nog heel veel video’s nodig. 
     		Gelukkig zien we steeds meer mensen al hun eigen instructievideo’s opnemen en deze ook op internet plaatsen. 
-    		Veel van deze video’s komen op Youtube terecht, wat volgens ons geen eindstation is. 
+    		Veel van deze video’s komen op YouTube terecht, wat volgens ons geen eindstation is. 
     		De video’s behalen namelijk nooit het potentiële bereik dat ze hebben en bovendien is er niet direct relevant oefenmateriaal aanwezig. 
     		Door video’s voor iktel.nl te maken help je leerlingen bij het onder de knie krijgen van oefeningen waar zij vastlopen.
     		In plaats van een bepaald probleem steeds opnieuw te moeten geven, kunnen leerlingen jouw instructie juist steeds opnieuw bekijken.
@@ -47,14 +47,14 @@
     		De verwachting is dat de inbreng van technologie in het onderwijs alleen nog maar gaat toenemen. Sommige leraren zijn hier al veel mee bezig, sommigen niet. 
     		Wij zijn van mening dat je hier als leerkracht in spe niet vroeg genoeg mee in aanraking kunt komen.
 			Gelukkig bieden veel pabo’s bieden al ICT of Nieuw Media minoren aan waar de leerlingen wordt geleerd hoe zij zelf instructievideo’s kunnen maken. 
-			Zelfs wanneer het kwalitatief hoogstaande video’s zijn, reiken deze video’s vaak niet verder dan het klaslokaal of raken zij in de vergetelheid op Youtube. 
+			Zelfs wanneer het kwalitatief hoogstaande video’s zijn, reiken deze video’s vaak niet verder dan het klaslokaal of raken zij in de vergetelheid op YouTube. 
 			Zou het daarom niet mooi zijn als deze video’s gekoppeld kunnen worden aan oefeningen die leerlingen nu al maken op de basisscholen?
 			Wij kunnen helpen met het bieden van relevante opdrachten waar de leerlingen aan kunnen werken waarbij ze ook nog eens relevante werkervaring opdoen en hun video’s al in de praktijk bekeken worden.
 			Is jullie pabo geinteresseerd om video’s voor iktel.nl te gaan maken? Stuur dan een mailtje naar info@iktel.nl.
 		</p>
     	<h3>Pilot</h3>
     	<p>
-    		iktel.nl is gratis beschikbaar en dat zal ook zo blijven. 
+    		Iktel.nl is gratis beschikbaar en dat zal ook zo blijven. 
     		We zijn op zoek naar zo veel mogelijk gebruikers om zo meer data te verzamelen waarmee we ons platform uiteindelijk kunnen verbeteren.    		
 			Wil je direct betrokken zijn bij de ontwikkeling van ons platform, stuur dan een mailtje naar info@iktel.nl
 		</p>
