--- a/templates/coach_resources/toolkit_content/ka-classrooms.html
+++ b/templates/coach_resources/toolkit_content/ka-classrooms.html
@@ -5,15 +5,15 @@
 	<h1>Waarom iktel.nl?</h1>
 	<hr>
 	
-	<p class="lead">iktel.nl kan je helpen een boeiend, dynamisch klaslokaal te creëren dat voorziet in de behoeften van elke leerling.</p>
+	<p class="lead">Iktel.nl kan je helpen een boeiend, dynamisch klaslokaal te creëren dat voorziet in de behoeften van elke leerling.</p>
 	
 
         <p><h3>Oefeningen en video's</h3></p>
         <p class="has-media"><span class="toolkit-media"><a href="/exercise/derivative_intuition"><img width="80%" src="/images/splashthumbnails/exercises/ex1.png" /></a></span>
 		<ul class="bullet">
-		<li>KA genereert een <strong>onbeperkt aantal willekeurige vragen</strong> in diverse onderwerpen, variërend van optellen/aftrekken tot logaritmen. Leerlingen kunnen bij elk probleem feedback en hints krijgen. Het systeem houdt de vorderingen van leerlingen bij, zodat jij geen huiswerk meer hoeft na te kijken.</li>
+		<li>Itkel.nl genereert een <strong>onbeperkt aantal willekeurige vragen</strong> in diverse onderwerpen, variërend van optellen/aftrekken tot logaritmen. Leerlingen kunnen bij elk probleem feedback en hints krijgen. Het systeem houdt de vorderingen van leerlingen bij, zodat jij geen huiswerk meer hoeft na te kijken.</li>
 		<li>Doordat opgaven willekeurig gekozen worden, <strong>kunnen leerlingen hun huiswerk niet kopiëren.</strong></li>
-		<li>iktel.nl heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
+		<li>Iktel.nl heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
 	</ul>
 		
         <p><h3>Data</h3></p>
@@ -26,16 +26,16 @@
 		
         <p><h3>Keuzevrijheid voor de leerling</h3></p>
 		<ul class="bullet">
-		<li>Content van de KA is altijd beschikbaar, leerlingen kunnen dus ook zelf kiezen in welk onderdeel zij zich verder willen verdiepen.</li>
+		<li>Content van iktel.nl is altijd beschikbaar, leerlingen kunnen dus ook zelf kiezen in welk onderdeel zij zich verder willen verdiepen.</li>
 		<li>Dankzij deze vrijheid worden leerlingen in staat gesteld om onderwerpen te kiezen waaraan zij in het verleden niet zijn blootgesteld. Hierdoor zijn leerlingen <strong>meer betrokken bij hun eigen leerproces</strong></li>
 	</ul>	
 	
 	<h3>Op welke uitdagingen moet ik voorbereid zijn voordat ik iktel.nl in mijn klas kan gebruiken?</h3>
         <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/RoGgxrCsCEQ" frameborder="0" allowfullscreen></iframe></span><p>
-	<p>Met KA kunnen leerlingen in hun eigen tempo werken. Dit kan echter leiden tot extra voorbereidingstijd, waardoor je in het begin een beetje overdonderd kan worden.</p>
+	<p>Met iktel.nl kunnen leerlingen in hun eigen tempo werken. Dit kan echter leiden tot extra voorbereidingstijd, waardoor je in het begin een beetje overdonderd kan worden.</p>
 		<p><strong>Voorbereidingstijd</strong>: In het begin heb je waarschijnlijk wat extra tijd nodig om de data te overzien en je planning hierop aan te passen. Een voordeel? Je hebt geen uitgebreide lesvoorbereiding meer nodig en zodra je iets meer ervaren bent met het systeem zal het je zelfs tijd besparen.</p>
-		<p><strong>Data</strong>: De data die aanwezig is in KA is een groot voordeel. In het begin kan de hoeveelheid beschikbare data zelfs een beetje overweldigend zijn. Besteed daarom van tevoren voldoende tijd om uit te vinden waar alles te vinden is. Dit zal je op den duur tijd schelen. <a href="using-data">Lees hier meer over</a>.</p>
-		<p><strong>Chaos</strong>: Dynamische klassen zijn spannend en energiek. Elke leerling werkt aan onderwerpen die relevant is voor hem of haar. Het werken met kleine groepen, een een-op-een benadering of individuele projecten kan chaotisch voelen. Het is daarom aan te raden deze stappen een voor een te introduceren. Begin met individueel werken, dan in kleine groepen, en laat dan pas studenten elkaar helpen. De chaos is veel gemakkelijker te omhelzen als je bedenkt dat elke student meer betrokken en echt aan het leren is.</p>
+		<p><strong>Data</strong>: De data die aanwezig is in iktel.nl is een groot voordeel. In het begin kan de hoeveelheid beschikbare data zelfs een beetje overweldigend zijn. Besteed daarom van tevoren voldoende tijd om uit te vinden waar alles te vinden is. Dit zal je op den duur tijd schelen. <a href="using-data">Lees hier meer over</a>.</p>
+		<p><strong>Chaos</strong>: Dynamische klassen zijn spannend en energiek. Elke leerling werkt aan onderwerpen die relevant zijn voor hem of haar. Het werken met kleine groepen, een een-op-een benadering of individuele projecten kan chaotisch voelen. Het is daarom aan te raden deze stappen een voor een te introduceren. Begin met individueel werken, dan in kleine groepen, en laat leerlingen elkaar hierna pas helpen. De chaos is veel gemakkelijker te omhelzen als je bedenkt dat elke leerling meer betrokken en echt aan het leren is.</p>
 		
 	
 	<p><a href="{{base_url}}/setting-up-accounts" class="call-to-action simple-button green">Volgende: Een klas opstarten →</a></p>
