Update cookies message with iktel.nl

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -179,7 +179,7 @@
         </div>
     {% endif %}
     <div id="cookie-message">
-        Khanacademie maakt gebruik van cookies. Lees
+        Iktel.nl maakt gebruik van cookies. Lees
         <a href="https://docs.google.com/document/pub?id=1qPIp5yEEHGDXMI_1No43p9uaGJnGDtj2BY3NGsyYySc">
             hier
         </a>
