--- a/templates/videoplayer.html
+++ b/templates/videoplayer.html
@@ -27,7 +27,7 @@
             </li>
             <li>
             <a  class="emailShare"
-                href="mailto:?Subject=I just learnt about {{video.title}} at Khanacademie&amp;Body=You can learn about it too. Check out http%3A%2F%2Fwww.iktel.nl%2Fvideo%3fv%3D{{video.youtube_id|urlencode}}"
+                href="mailto:?Subject=I just learnt about {{video.title}} at Iktel.nl&amp;Body=You can learn about it too. Check out http%3A%2F%2Fwww.iktel.nl%2Fvideo%3fv%3D{{video.youtube_id|urlencode}}"
                 onclick="_gaq.push(['_trackEvent', 'Click', 'Video-Page-Share-Email']);">
                 <i class="icon-envelope icon-large"></i>
                 Email
