--- a/templates/gebruiksvoorwaarden.html
+++ b/templates/gebruiksvoorwaarden.html
@@ -19,9 +19,9 @@
 		<p>
 		Welkom bij www.iktel.nl en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van deze website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de website voor iedereen werkt.</p>
 
-		<p>Iktel.nl geïnspireerd op Khan Academy.</p>
+		<p>Iktel.nl is geïnspireerd door de Amerikaanse Khan Academy. </p>
 
-		<p>De website is een initiatief van Perceptum en is geïnspireerd op- en gelanceerd met toestemming van www.khanacademy.org, maar maakt hier geen deel vanuit. De op deze website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de website is samengesteld door iktel.nl en haar vrijwilligers.</p>
+		<p>De website is een initiatief van Perceptum en is geïnspireerd door het platform waarop de Amerikaanse Khan Academy werkt. Iktel.nl maakt hier echter geen deel van uit. De op deze website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de website is samengesteld door iktel.nl en haar vrijwilligers.</p>
 
 		<h6>Voorwaarden toegang</h6>
         <div class="info-list"><p>
@@ -32,7 +32,7 @@
 			    <li> Je kunt inloggen op de Website met een Google- of Facebook account. Door in te loggen op de Website via Google en Facebook, ga je akkoord met de  gebruiksvoorwaarden van deze partijen. iktel.nl is niet verantwoordelijk voor de interactie die tussen jou en Google of Facebook plaatstvindt.  
 			    </li>	
 			</ol>
-        </div></p>
+        </div>
 
 		<h6>Privacy</h6>
 
