tekst in gebruikersvoorwaarden

--- a/templates/gebruiksvoorwaarden.html
+++ b/templates/gebruiksvoorwaarden.html
@@ -21,7 +21,7 @@
 
 		<p>Iktel.nl is geïnspireerd door de Amerikaanse Khan Academy. </p>
 
-		<p>De website is een initiatief van Perceptum en is geïnspireerd door het platform waarop de Amerikaanse Khan Academy werkt. Iktel.nl maakt hier echter geen deel van uit. De op deze website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de website is samengesteld door iktel.nl en haar vrijwilligers.</p>
+		<p>De website is een initiatief van Perceptum en is geinspireerd door het platform waarop de Amerikaanse Khan Academy werkt. Iktel.nl maakt hier echter geen deel van uit. De op deze website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de website is samengesteld door iktel.nl en haar vrijwilligers.</p>
 
 		<h6>Voorwaarden toegang</h6>
         <div class="info-list"><p>
