Change Khan links

--- a/templates/coach_resources/view_resources.html
+++ b/templates/coach_resources/view_resources.html
@@ -98,12 +98,12 @@
 
         <div class="span3">
             <div class="smallpic">
-                <a href="http://khanacademy.desk.com">
+                <a href="http://www.iktel.nl/about/faq">
                     <img src="/images/toolkit-02.png">
                 </a>
             </div>
-            <h3><a href="http://khanacademy.desk.com">Jouw vragen</a></h3>
-            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.iktel.nl/about/faq"><br>Wat is iktel.nl? </a> <br> Of, <a href="http://www.iktel.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
+            <h3><a href="http://www.iktel.nl/about/faq">Jouw vragen</a></h3>
+            <p>Vind- en geef antwoord op veelgestelde vragen<br> Of, <a target="_blank" href="https://www.google.com/moderator/#15/e=1d97ce&t=1d97ce.40&f=1d97ce.675f8c">voeg je eigen vragen toe</a>. <br>
         </div>
 
         <div class="span3">
