Update iktel logo

--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -149,7 +149,7 @@
         {{ js_css_packages.css_package("homepage") }}
     {% endif %}
     <script type="text/javascript">
-    $(document).onclick(function () {
+    $(document).click(function () {
         $('#slideshow > div:gt(0)').hide();
         setInterval(function () {
             $('#slideshow > div:first')
