--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -76,7 +76,7 @@
         <meta property="og:title" content="iktel.nl"/>
         <meta property="og:description"
               content="Leer wat je wil, wanneer je het wil en in je eigen tempo. En ook nog eens gratis."/>
-        <meta property="og:image" content="http://www.iktel.nl/images/khan-logo-header.png"/>
+        <meta property="og:image" content="http://www.iktel.nl/images/iktel-logo-header.png"/>
         <meta property="fb:page_id" content="123650984422563"/>
     {% endblock meta_facebook_tags %}
 
@@ -212,13 +212,9 @@
             <div id="top-header">
                 <div class="top-header-links">
                     <div id="navbar" class="overflow overflow-white"> {# class="overflow" #}
-                        <a href="/"><div id="logo">iktel.nl</div></a>
-                        <!-- Old logo and old name
                         <a id="logo" href="/" title="Naar de homepage!" data-tag="Header">
-                            {# <img src="/images/logos/khan-academie2.png"> #}
+                            <img src="/images/iktel-logo-header.png">
                         </a>
-                        <a id="stichting" href="http://www.perceptum.nl/blog/2013/06/20/geef-je-mening-voor-de-nieuwe-naam-van-de-khan-academie/"> </a>
-                         -->
                     <span class="page_links" id="page_auth">
                
                         <span id="goals-container"></span>
